manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultcorp
  labels:
    app: vaultcorp
spec:
type: ClusterIP
  selector:
    app: vaultcorp
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
